Fixed top alignment of slideshow

--- a/site/assets/css/kb-portfolio.scss
+++ b/site/assets/css/kb-portfolio.scss
@@ -45,6 +45,7 @@ main.portfolio h1 {
 .slideshow {
     grid-area: slideshow;
     width: calc(100vw - 2rem);
+    margin: 0;
 }
 
 .slideshow figure.slide {
